--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ p.Menor {text-align:center;margin:0; font-family:Apple Chancery, cursive; font-w
 <body>
 <div>
 <ul>
-	<li><a href=""> Sobre Nós</a></li>
+	<li><a href="https://JRBordados.github.io/src/Sobre Nós"> Sobre Nós</a></li>
 	<li><a href=""> Produtos </a></li>
 	<li><a href=""> Contato </a></li>
 	<li><a href=""> Endereço </a></li>
@@ -62,4 +62,5 @@ p.Menor {text-align:center;margin:0; font-family:Apple Chancery, cursive; font-w
 	
 </div>
 </body>
+
 </html>
