--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ p.Menor {text-align:center;margin:0; font-family:Apple Chancery, cursive; font-w
 <body>
 <div>
 <ul>
-	<li><a href="https://JRBordados.github.io/src/Sobre Nós"> Sobre Nós</a></li>
+	<li><a href="src/sobrenos.html"> Sobre Nós</a></li>
 	<li><a href=""> Produtos </a></li>
 	<li><a href=""> Contato </a></li>
 	<li><a href=""> Endereço </a></li>
@@ -64,3 +64,4 @@ p.Menor {text-align:center;margin:0; font-family:Apple Chancery, cursive; font-w
 </body>
 
 </html>
+
