--- a/sobrenos.html
+++ b/sobrenos.html
@@ -87,10 +87,10 @@
 <body>
 
 <ul> 
-	<li><a href=""> Menu </a></li>
-	<li><a href=""> Produtos </a></li>
-	<li><a href=""> Contato </a></li>
-	<li><a href=""> Endereço </a></li>
+	<li><a href="index.html"> Menu </a></li>
+	<li><a href="produtos.html"> Produtos </a></li>
+	<li><a href="produtos.hml"> Contato </a></li>
+	<li><a href="endereco.html"> Endereço </a></li>
 </ul>
 <hr style="height:7px;width:50%;margin-top:30;padding-left:0;color:black;background-color:black;border-color:black;box-shadow: 4px 4px 4px 4px rgb(0 0 0 / 20%">
 <h1>JR Bordados</h1>
@@ -123,3 +123,4 @@
 </div></div>
 
 </body></html>
+
