--- a/sobrenos.html
+++ b/sobrenos.html
@@ -89,7 +89,7 @@
 <ul> 
 	<li><a href="index.html"> Menu </a></li>
 	<li><a href="produtos.html"> Produtos </a></li>
-	<li><a href="produtos.hml"> Contato </a></li>
+	<li><a href="contato.hml"> Contato </a></li>
 	<li><a href="endereco.html"> Endereço </a></li>
 </ul>
 <hr style="height:7px;width:50%;margin-top:30;padding-left:0;color:black;background-color:black;border-color:black;box-shadow: 4px 4px 4px 4px rgb(0 0 0 / 20%">
@@ -123,4 +123,5 @@
 </div></div>
 
 </body></html>
+
 
