--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ p.Menor {text-align:center;margin:0; font-family:Apple Chancery, cursive; font-w
 	<li><a href="endereco.html"> Endereço </a></li>
 </ul>
 <div>
-<img src="src/Bordando.jpg" style="float:right;width:850px; height:550px;margin-top:-20px;margin-right:30px;border-radius: 25px;">
+<img src="src/Bordando.jpg" style="float:right;width:850px; height:550px;margin-top:-20px;margin-right:30px;border-radius: 25px;box-shadow: 10px 10px 10px 10px rgb(0 0 0 / 20%);">
 <div class="Caixa">
 <p class="TItulo">Bem-Vindo ao site da <br> JR Bordados</p>
 <p class="Menor">Uma empresa especializada em bordados!</p>
@@ -62,4 +62,5 @@ p.Menor {text-align:center;margin:0; font-family:Apple Chancery, cursive; font-w
 	
 </div>
 </body>
+
 </html>
