--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@ p.Menor {text-align:center;margin:0; font-family:Apple Chancery, cursive; font-w
 	<li><a href="contato.html"> Contatos </a></li>
 	<li><a href="endereco.html"> Endereço </a></li>
 </ul>
+<hr style="height:7px;width:50%;margin-top:30;padding-left:0;color:black;background-color:black;border-color:black;box-shadow: 4px 4px 4px 4px rgb(0 0 0 / 20%">
+<h1>JR Bordados</h1>
+<hr style="height:7px;width:50%;margin-top:0;padding-left:0;color:black;background-color:black;border-color:black;box-shadow: 4px 4px 4px 4px rgb(0 0 0 / 20%);">
 <div>
 <img src="src/Bordando.jpg" style="float:right;width:850px; height:550px;margin-top:-20px;margin-right:30px;border-radius: 25px;box-shadow: 10px 10px 10px 10px rgb(0 0 0 / 20%);">
 <div class="Caixa">
@@ -79,4 +82,5 @@ p.Menor {text-align:center;margin:0; font-family:Apple Chancery, cursive; font-w
 	
 </div>
 </body>
+
 </html>
