Enhance HTML structure and add h1 styling
Added h1 styling and improved structure of the HTML document.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,16 @@ ul {
 		li a:hover {
 		background-color: darkblue;
 		}
-
+	
+h1 {
+		text-shadow: 3px 3px #245699;
+		font-size: 50px;
+		margin-top: -10;
+		margin-left: 0;
+		margin-bottom:0 ;
+		text-align: center;
+		}
+	
 div.Caixa{    
 		width:690px;
 		max-width:990px;
@@ -84,3 +93,4 @@ p.Menor {text-align:center;margin:0; font-family:Apple Chancery, cursive; font-w
 </body>
 
 </html>
+
